--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,9 +1,9 @@
 <html>
     <body>
         <form method="POST">
-            <input type="text" name=""/>
-            <input type="text" name=""/>
-            <input type="submit" name="submit"/>
+           <input type="file" id="img" name="img" accept="image/*">
+            <input type="submit">      
+            
         </form>
     </body>
 </html>
