--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form method="POST">
+        <form method="POST", action="/login">
             enter email<input type="text" name="email"/>
             enter password<input type="text" name="password"/>
             <input type="submit" name="submit"/>
