--- a/templates/image.html
+++ b/templates/image.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form method="POST" action="/image",enctype="multipart/form-data">
+        <form method="POST" action="/" enctype="multipart/form-data">
            <input type="file" id="img" name="file" accept="image/*">
             <input type="submit">      
             
