--- a/templates/image.html
+++ b/templates/image.html
@@ -5,5 +5,8 @@
             <input type="submit">      
             
         </form>
+        {% if flower %}
+            This flower is of the type: {{flower}}
+        {% endif %}
     </body>
 </html>
