--- a/templates/image.html
+++ b/templates/image.html
@@ -1,12 +1,35 @@
 <html>
+    <head>
+        <style>
+            body{
+                background-image:url("{{url_for('static',filename='rose.jpg')}}");
+                background-repeat:no-repeat;
+                background-size:cover;
+            }
+        </style>
+        <link rel="stylesheet" href="{{url_for('static',filename='bootstrap.min.css')}}"></head>
     <body>
-        <form method="POST" action="/" enctype="multipart/form-data">
-           <input type="file" id="img" name="file" accept="image/*">
-            <input type="submit">      
-            
-        </form>
-        {% if flower %}
-            This flower is of the type: {{flower}}
+        <div class="container">
+            <div class="row mt-5 d-flex  justify-content-center">
+                 <div class="col-4 ">
+                     <h4 class='my-3'> PLANT CLASSIFIER</h4>
+                    <form method="POST" action="/" enctype="multipart/form-data">
+                        <div class='form-group'>
+                        <input required type="file" id="img" name="file" accept="image/*" class='form-control my-2'>
+                        </div>
+                        <div class='form-group d-flex  justify-content-center'>
+          <div>  <input type="submit"class='btn btn-primary'> </div>  
+                        </div>   
+                         
+                     </form>
+                     {% if flower %}
+           <div class='text-white h6 mt-5'> This flower is of the type: {{flower}}</div>
         {% endif %}
+                 </div>
+            </div>
+        
+        </div>
+        
+        
     </body>
 </html>
